Cap2025/src/edu/najah/cap/advance/examples/exc3/bad/TrimFilter.java
package edu.najah.cap.advance.examples.exc3.bad;

public class TrimFilter implements ITrimFilter {

    public String applyTrimFilter(String result) {
        return result.trim();//second filter
    }
}
